[FEAT]: Swaggerupdate for associated job [FIX]: Model name fix
